// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by consultation: user1 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "totalCount": 14,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by consultation: user2 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "totalCount": 43,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by consultation: user5 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "totalCount": 1,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by project: user1 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "totalCount": 104,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by project: user2 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "totalCount": 0,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by project: user5 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "totalCount": 4,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by step: user1 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "totalCount": 104,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by step: user2 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "totalCount": 1,
    },
  },
}
`;

exports[`User.contributions connection fetches a user's published, non-draft, non-trashed contributions by step: user5 1`] = `
Object {
  "node": Object {
    "contributions": Object {
      "totalCount": 0,
    },
  },
}
`;
